--- a/sass/modules/_comment.scss
+++ b/sass/modules/_comment.scss
@@ -55,8 +55,8 @@
   @extend .flag;
 
   &.is-sticky {
-    top: 1em;
-    right: 1em;
+    top: 1.5em;
+    right: 1.5em;
 
     background-color: $white;
   }
